# serverless-url-shortener

./: Cargo.toml  README.md  spin.toml
api/: Cargo.toml
api/src/: domain.rs  lib.rs
frontend/: astro.config.mjs  package-lock.json
frontend/src/components/: AddLinkForm.astro  AppFooter.astro  AppHeader.astro  EditModal.astro  LinksSection.astro  ToastContainer.astro
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro
frontend/src/scripts/: app.ts
frontend/src/styles/: global.css
src/: api_models.rs  lib.rs
